--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "classnames": "2.3.1",
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
     "next": "latest",
@@ -21,9 +20,6 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "autoprefixer": "10.4.0",
-    "postcss": "8.4.5",
-    "tailwindcss": "3.0.5"
+    "@types/react-dom": "^17.0.5"
   }
 }
