--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
+    "styled-components": "^5.3.5",
     "three": "^0.137.0",
     "typescript": "^4.2.4"
   },
@@ -30,6 +31,10 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5"
+    "@types/react-dom": "^17.0.5",
+    "@types/styled-components": "^5.1.24"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
