--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
-    "@types/styled-components": "^5.1.24"
+    "@types/styled-components": "^5.1.24",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4"
   },
   "resolutions": {
     "styled-components": "^5"
