--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@mdx-js/loader": "^2.1.1",
+    "@mdx-js/runtime": "^1.6.22",
     "@react-three/a11y": "^2.2.3",
     "@react-three/cannon": "^5.0.0",
     "@react-three/drei": "^8.16.0",
@@ -24,6 +27,7 @@
     "remark": "14.0.2",
     "remark-html": "15.0.1",
     "styled-components": "^5.3.5",
+    "theme-ui": "^0.14.2",
     "three": "^0.137.0",
     "typescript": "^4.2.4"
   },
