--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@mdx-js/loader": "^2.1.1",
     "@mdx-js/runtime": "^1.6.22",
     "@react-three/a11y": "^2.2.3",
@@ -26,7 +27,6 @@
     "react-dom": "^17.0.2",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
-    "styled-components": "^5.3.5",
     "theme-ui": "^0.14.2",
     "three": "^0.137.0",
     "typescript": "^4.2.4"
@@ -36,11 +36,7 @@
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
-    "@types/styled-components": "^5.1.24",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4"
-  },
-  "resolutions": {
-    "styled-components": "^5"
   }
 }
