--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.8.1",
     "@mdx-js/loader": "^2.1.1",
     "@mdx-js/runtime": "^1.6.22",
+    "@next/mdx": "^12.1.4",
     "@react-three/a11y": "^2.2.3",
     "@react-three/cannon": "^5.0.0",
     "@react-three/drei": "^8.16.0",
