--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@mdx-js/loader": "^2.1.1",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^12.1.4",
     "@react-three/a11y": "^2.2.3",
