Use relative imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "jsxImportSource": "theme-ui",
-    "baseUrl": "."
+    "jsxImportSource": "theme-ui"
   },
   "exclude": ["node_modules"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
