--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^12.1.4",
+    "@radix-ui/colors": "^0.1.8",
     "@react-three/a11y": "^2.2.3",
     "@react-three/cannon": "^5.0.0",
     "@react-three/drei": "^8.16.0",
