--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
     "lamina": "^1.1.2",
-    "leva": "^0.9.23",
-    "next": "latest",
+    "next": "12.1.6-canary.3",
     "postprocessing": "^6.26.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -37,8 +36,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
+    "@types/react": "^18.0.2",
+    "@types/react-dom": "^18.0.1",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4"
   }
