--- a/package.json
+++ b/package.json
@@ -14,31 +14,30 @@
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^12.1.4",
     "@radix-ui/colors": "^0.1.8",
-    "@react-three/a11y": "^2.2.3",
-    "@react-three/cannon": "^5.0.0",
-    "@react-three/drei": "^8.16.0",
-    "@react-three/fiber": "^7.0.26",
-    "@react-three/postprocessing": "^2.3.1",
+    "@react-three/a11y": "^2.2.4",
+    "@react-three/cannon": "^6.2.0",
+    "@react-three/drei": "^9.4.3",
+    "@react-three/fiber": "^8.0.0",
+    "@react-three/postprocessing": "^2.3.2",
     "@use-gesture/react": "^10.2.9",
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
-    "lamina": "^1.1.2",
-    "leva": "^0.9.23",
-    "next": "latest",
+    "lamina": "^1.1.15",
+    "next": "12.1.6-canary.3",
     "postprocessing": "^6.26.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
     "theme-ui": "^0.14.2",
-    "three": "^0.137.0",
+    "three": "^0.139.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
+    "@types/react": "^18.0.2",
+    "@types/react-dom": "^18.0.1",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4"
   }
