--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
-    "@next/mdx": "^12.1.4",
+    "@next/mdx": "^12.2.4",
     "@radix-ui/colors": "^0.1.8",
-    "@react-three/a11y": "^2.2.4",
+    "@react-three/a11y": "^3.0.0",
     "@react-three/cannon": "^6.2.0",
     "@react-three/drei": "^9.4.3",
     "@react-three/fiber": "^8.0.0",
@@ -23,7 +23,7 @@
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
     "lamina": "^1.1.15",
-    "next": "12.1.6-canary.3",
+    "next": "^12.2.4",
     "postprocessing": "^6.26.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
