--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     "@radix-ui/colors": "^0.1.8",
     "@react-three/a11y": "^3.0.0",
     "@react-three/cannon": "^6.2.0",
-    "@react-three/drei": "^9.4.3",
-    "@react-three/fiber": "^8.0.0",
-    "@react-three/postprocessing": "^2.3.2",
+    "@react-three/drei": "9.40.0",
+    "@react-three/fiber": "8.9.0",
+    "@react-three/postprocessing": "2.7.0",
     "@use-gesture/react": "^10.2.9",
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
-    "lamina": "^1.1.15",
+    "lamina": "1.1.23",
     "next": "^12.2.4",
-    "postprocessing": "^6.26.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "postprocessing": "6.29.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
     "theme-ui": "^0.14.2",
-    "three": "^0.139.0",
+    "three": "0.146.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
