--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@next/mdx": "^12.2.4",
     "@radix-ui/colors": "^0.1.8",
     "@react-three/a11y": "^3.0.0",
-    "@react-three/cannon": "^6.2.0",
     "@react-three/drei": "9.40.0",
     "@react-three/fiber": "8.9.0",
     "@react-three/postprocessing": "2.7.0",
+    "@react-three/rapier": "0.11.0",
     "@use-gesture/react": "^10.2.9",
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
