Add mapbox packages

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
     "lamina": "1.1.23",
+    "mapbox-gl": "^2.11.0",
     "next": "^12.2.4",
     "postprocessing": "6.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.19",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
     "theme-ui": "^0.14.2",
