--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@mdx-js/react": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^12.2.4",
+    "@notionhq/client": "^2.2.3",
     "@radix-ui/colors": "^0.1.8",
     "@react-three/a11y": "^3.0.0",
     "@react-three/drei": "9.40.0",
-    "@react-three/fiber": "8.9.0",
+    "@react-three/fiber": "8.9.1",
     "@react-three/postprocessing": "2.7.0",
-    "@react-three/rapier": "0.11.0",
+    "@react-three/rapier": "0.11.2",
     "@use-gesture/react": "^10.2.9",
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
     "lamina": "1.1.23",
     "mapbox-gl": "^2.11.0",
     "next": "^12.2.4",
+    "notion-to-md": "^2.5.5",
     "postprocessing": "6.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
