--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "8.9.1",
     "@react-three/postprocessing": "2.7.0",
     "@react-three/rapier": "0.11.2",
+    "@theme-ui/mdx": "^0.15.4",
     "@use-gesture/react": "^10.2.9",
     "date-fns": "2.21.3",
     "lamina": "1.1.23",
@@ -32,7 +33,7 @@
     "react-map-gl": "^7.0.19",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
-    "theme-ui": "^0.14.2",
+    "theme-ui": "^0.15.4",
     "three": "0.146.0",
     "typescript": "^4.2.4"
   },
