--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "@types/node": "^15.6.0",
     "@types/react": "^18.0.2",
     "@types/react-dom": "^18.0.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
