--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@emotion/styled": "^11.8.1",
     "@mdx-js/runtime": "^1.6.22",
     "@notionhq/client": "^2.2.3",
-    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/colors": "^3.0.0-rc.5",
     "@react-three/a11y": "^3.0.0",
     "@react-three/drei": "9.40.0",
     "@react-three/fiber": "8.9.1",
