--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
     "@types/react": "^18.0.2",
