--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-three/rapier": "0.11.2",
     "@theme-ui/mdx": "^0.15.4",
     "@use-gesture/react": "^10.2.9",
+    "classnames": "^2.3.2",
     "date-fns": "2.21.3",
     "lamina": "1.1.23",
     "mapbox-gl": "^2.11.0",
     "next": "^12.2.4",
+    "next-themes": "^0.2.1",
     "notion-to-md": "^2.5.5",
     "postprocessing": "6.29.1",
     "react": "^18.2.0",
@@ -42,6 +44,8 @@
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.31",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "^3.3.3"
   }
 }
