--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "@emotion/styled": "^11.8.1",
     "@mdx-js/runtime": "^1.6.22",
     "@notionhq/client": "^2.2.3",
-    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/colors": "^3.0.0",
     "@react-three/a11y": "^3.0.0",
     "@react-three/drei": "9.40.0",
     "@react-three/fiber": "8.9.1",
     "@react-three/postprocessing": "2.7.0",
     "@react-three/rapier": "0.11.2",
-    "@theme-ui/mdx": "^0.15.4",
     "@use-gesture/react": "^10.2.9",
+    "classnames": "^2.3.2",
     "date-fns": "2.21.3",
     "lamina": "1.1.23",
     "mapbox-gl": "^2.11.0",
     "next": "^12.2.4",
+    "next-themes": "^0.2.1",
     "notion-to-md": "^2.5.5",
     "postprocessing": "6.29.1",
     "react": "^18.2.0",
@@ -33,11 +34,17 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
     "@types/react": "^18.0.2",
     "@types/react-dom": "^18.0.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.31",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.4",
+    "tailwindcss": "^3.3.3"
   }
 }
