--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "date-fns": "2.21.3",
     "lamina": "1.1.23",
     "mapbox-gl": "^2.11.0",
-    "next": "^12.2.4",
+    "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "notion-to-md": "^2.5.5",
     "postprocessing": "6.33.2",
@@ -41,7 +41,7 @@
     "@types/react-dom": "^18.0.1",
     "autoprefixer": "^10.4.16",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
+    "eslint-config-next": "^13.5.4",
     "postcss": "^8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
