--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@mdx-js/runtime": "^1.6.22",
-    "@notionhq/client": "^2.2.3",
+    "@notionhq/client": "^2.2.13",
     "@radix-ui/colors": "^3.0.0",
     "@react-three/a11y": "^3.0.0",
     "@react-three/drei": "9.86.3",
@@ -19,14 +18,17 @@
     "classnames": "^2.3.2",
     "date-fns": "2.21.3",
     "lamina": "1.1.23",
-    "mapbox-gl": "^2.11.0",
+    "mapbox-gl": "^2.15.0",
     "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "notion-to-md": "^2.5.5",
     "postprocessing": "6.33.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^7.0.19",
+    "react-map-gl": "^7.1.0",
+    "react-markdown": "^9.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "three": "0.150.0",
     "typescript": "^4.2.4"
   },
@@ -34,8 +36,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
-    "@types/react": "^18.0.2",
-    "@types/react-dom": "^18.0.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
     "eslint": "8.12.0",
     "eslint-config-next": "^13.5.4",
