--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@notionhq/client": "^2.2.13",
     "@radix-ui/colors": "^3.0.0",
     "@react-three/a11y": "^3.0.0",
