--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "8.14.4",
     "@react-three/postprocessing": "2.8.0",
     "@react-three/rapier": "0.11.3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@use-gesture/react": "^10.2.9",
     "classnames": "^2.3.2",
     "date-fns": "2.21.3",
@@ -32,7 +33,7 @@
     "react-use-measure": "^2.1.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.0.0",
     "three": "0.150.0",
     "typescript": "^4.2.4"
   },
@@ -42,11 +43,10 @@
     "@types/node": "^15.6.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.16",
     "eslint": "8.12.0",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.31",
     "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4"
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
