--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/rapier": "0.11.3",
     "@tailwindcss/postcss": "^4.0.0",
     "@use-gesture/react": "^10.2.9",
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.3.2",
     "date-fns": "2.21.3",
     "framer-motion": "^11.2.4",
